fixed display on small screens

--- a/style.css
+++ b/style.css
@@ -26,11 +26,18 @@ body{
     color: var(--fontColor);
     font-size: var(--fontSize);
     background-color: var(--mainBg);
+     @media(width<850px){
+        padding-inline: 20px;
+    }
 }
 
 img{
     display: block;
     max-inline-size: 100%;
+}
+
+h1{
+    margin-top: 20px;
 }
 
 h1,h2{
@@ -128,13 +135,15 @@ a{
     display: block;
     color: var(--buttonBG);
     cursor: pointer;
-    list-style:circle;
     font-weight: 600;
+    cursor: pointer;
+    transition: all .4s ease-in-out;
 }
 
-a::marker{
-    color: var(--mainBg);
+a:hover{
+    color: var(--hColor);
 }
+
 
 .wrapper{
     max-inline-size: 1200px;
@@ -153,23 +162,34 @@ a::marker{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media(width<850px){
+        flex-wrap: wrap-reverse;
+    }
 }
 
 .myImg{
     max-inline-size: 500px;
     border-radius: 20px;
     box-shadow: 2px 2px 5px var(--hColor);
+    @media(width<850px){
+        margin-block: 20px;
+        max-inline-size: 350px;
+        margin: 0 auto;
+    }
 }
 
 .lang{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    text-align: center;
     color: var(--hColor);
     font-size: 1.8rem;
     font-weight: 650;
     margin-block: 20px;
     padding-inline: 20%;
+    @media(width>850px){
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .lang p{
@@ -191,11 +211,13 @@ a::marker{
 
 .projects{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-block: 40px;
     line-height: 40px;
-    overflow: hidden;
+    text-align: center;
+    @media(width>850px){
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .projects img{
@@ -229,6 +251,9 @@ a::marker{
     display: flex;
     justify-content: space-between;
     align-items: start;
+    @media(width<850px){
+        flex-wrap: wrap;
+    }
 }
 
 .contact h2{
